<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menupage.HomeDetail">

    <ImageView
        android:id="@+id/detailTraderImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/detailTraderName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/kedai_durian2"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailTraderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold|normal"
        android:text="@string/trader_NAME"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/detailTraderImage" />

    <TextView
        android:id="@+id/detailTraderAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/trader_ADDRESS"
        android:textColor="#babfba"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/detailTraderName" />

    <TextView
        android:id="@+id/detailTraderDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/trader_DESC"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#4DA192"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/detailTraderAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>