<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addEmailLogin"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_input_box_v2"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:drawable="@color/white"
        android:drawableStart="@drawable/ic_alternate_email"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="Insert Email ..."
        android:inputType="textEmailAddress"
        android:paddingStart="15px"
        android:paddingEnd="25px"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/addPasswordValue"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input_box_v2"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:drawable="@color/white"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="Insert Password ..."
        android:inputType="textPassword"
        android:paddingStart="20px"
        android:paddingEnd="25px"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEmailLogin" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:backgroundTint="#006660"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPasswordValue" />

    <TextView
        android:id="@+id/goToCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>